# ip-tracker

./: .env  DEPLOYMENT.md  README.md  app.py  fly.toml  pyproject.toml
.github/workflows/: deploy-backend.yml  pages.yml
backend/: README.md  app.py  fly.toml  pyproject.toml
docs/: app.js  index.html  style.css
src/ip_tracker/: __init__.py  main.py
src/ip_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html  login.html
