[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ip-tracker"
version = "0.1.0"
description = "IP Tracker and Subnet Management Tool - A lightweight web-based tool to manage IP address allocations"
authors = [{name = "Aadish Bahati", email = "aadish.bahati@essentialenergy.com.au"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
